ACLOCAL_AMFLAGS=-I build-aux

SUBDIRS =   src/lib/DttSP                   \
            src/dspserver                   \
            src/util/pylauncher             \
            src/hardware/hiqsdr             \
            src/hardware/hpsdrsvr           \
            src/hardware/sdr1000            \
            src/hardware/sdriq              \
            src/hardware/softrock           \
            src/hardware/sdr-widget         \
            @MAKE_QTRADIO@                  \
            @MAKE_PERSEUS@                  \
            @MAKE_USRP@                     \
            @MAKE_RTLSDR@
