bin_PROGRAMS = hpsdrsvr

hpsdrsvr_CFLAGS = -std=gnu99 -O3 -Wall @SIMD_FLAGS@

hpsdrsvr_SOURCES = bandscope.c  client.h    messages.h  ozy_ringbuffer.c  ozyio.h     server.c \
                   bandscope.h  listener.c  ozy.c       ozy_ringbuffer.h  receiver.c  util.c \
                   client.c     listener.h  ozy.h       ozyio.c           receiver.h  util.h
